--- a/projects/index.html
+++ b/projects/index.html
@@ -78,8 +78,7 @@
 						<h2>Full Portfolio</h2>
 					</header>
 					<p>
-						Here is my full portfolio. Right now I am quite busy and does not have time to
-						update all my projects here. But I plan to do so sometime later this year.
+						Here is my full portfolio.
 					</p>
 					<p>
 						For some projects, details are available upon request.
@@ -104,6 +103,36 @@
 								<ul>
 									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://medicine.vumc.org/person/marcela-brissova-phd">Marcela Brissova</a>.</li>
 									<li>Redesign the GNN Explainer to perform label-wise explanation, validate the model on T2D islet samples and extract predictive spatial patterns. </li>
+									<li>Actively on-going...</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/active_learn/cover.png" class="image fit thumb">
+									<img src="./2020/active_learn/cover.png" alt="" />
+								</a>
+								<h3>Active learning on Graph Neural Network via graph partition <i>(Research)</i></h3>
+								<p>
+									[code: upon request]
+								</p>
+								<ul>
+									<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
+									<li>A practical active learning query strategy on Graph Neural Networks.</li>
+									<li>In preparation of publication...</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/exception/cover.png" class="image fit thumb">
+									<img src="./2020/exception/cover.png" alt="" />
+								</a>
+								<h3>Exception Handling in Autonomous Vehicles via Human Language Communication <i>(Research)</i></h3>
+								<p>
+									[code: upon request]
+								</p>
+								<ul>
+									<li>Instructed by <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
+									<li>Develop a smart interface that takes human interaction by language instructions and handle the exceptions in autonomous vehicles. </li>
 									<li>Actively on-going...</li>
 								</ul>
 							</article>
@@ -143,7 +172,7 @@
 									<img src="./2020/insta_mini/cover.png" alt="" />
 								</a>
 								<h3>Instagram MINI <i>(Course)</i></h3>
-								<a>
+								<p>
 									[<a href="https://eecs485staff.github.io/p3-insta485-clientside/">description</a>][code: upon request]
 								</p>
 								<ul>
