--- a/index.html
+++ b/index.html
@@ -402,14 +402,41 @@
 								<a href="projects/2020/seg_explainer/cover.png" class="image fit thumb">
 									<img src="projects/2020/seg_explainer/cover.png" alt="" />
 								</a>
-								<h3>GNN Prediction Interpretation: Spatial Cell Patterns of T2D Islets <i>(Research)</i></h3>
+								<h3>GNN Prediction Interpretation: Spatial Cell Patterns of T2D Islets</h3>
 								<p>
 									[<a href="https://github.com/Mars-tin/cell-seg-explainer">code</a>]
 								</p>
 								<ul>
 									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://medicine.vumc.org/person/marcela-brissova-phd">Marcela Brissova</a>.</li>
 									<li>Redesign the GNN Explainer to perform label-wise explanation, validate the model on T2D islet samples and extract predictive spatial patterns. </li>
-									<li>Actively on-going...</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="projects/2020/active_learn/cover.png" class="image fit thumb">
+									<img src="projects/2020/active_learn/cover.png" alt="" />
+								</a>
+								<h3>Active learning on Graph Neural Network via graph partition</h3>
+								<p>
+									[code: upon request]
+								</p>
+								<ul>
+									<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
+									<li>A practical active learning query strategy on Graph Neural Networks.</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="projects/2020/exception/cover.png" class="image fit thumb">
+									<img src="projects/2020/exception/cover.png" alt="" />
+								</a>
+								<h3>Exception Handling in Autonomous Vehicles via Human Language Communication</h3>
+								<p>
+									[code: upon request]
+								</p>
+								<ul>
+									<li>Instructed by <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
+									<li>Develop a smart interface that takes human interaction by language instructions and handle the exceptions in autonomous vehicles. </li>
 								</ul>
 							</article>
 
@@ -417,14 +444,13 @@
 								<a href="projects/2020/tad_level_extraction/cover.png" class="image fit thumb">
 									<img src="projects/2020/tad_level_extraction/cover.png" alt="" />
 								</a>
-								<h3>TAD Level Architectural Feature Extraction Caller <i>(Research)</i></h3>
+								<h3>TAD Level Architectural Feature Extraction Caller</h3>
 								<p>
 									[<a href="https://github.com/Mars-tin/fast-stripe-calling">code</a>]
 								</p>
 								<ul>
 									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://www.pathology.med.umich.edu/faculty/xiaozhan">Xiaotian Zhang</a>.</li>
 									<li>Extract TAD level architectural stripes from HiC, evaluate the quality and compare between cell lines.</li>
-									<li>Todo: extend the algorithm to inversions and het deletions.</li>
 								</ul>
 							</article>
 
@@ -439,21 +465,6 @@
 								<ul>
 									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a>.</li>
 									<li>Deconvolute the islet tissue specific HiC into single cell HiC specific to alpha and beta cells, and validate the results on synthetic and real dataset.</li>
-									<li>Todo: extend the algorithm to minority cell types like delta cells.</li>
-								</ul>
-							</article>
-
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="projects/2020/insta_mini/cover.png" class="image fit thumb">
-									<img src="projects/2020/insta_mini/cover.png" alt="" />
-								</a>
-								<h3>Instagram MINI</h3>
-								<p>
-									[code: upon request]
-								</p>
-								<ul>
-									<li>Project of EECS485, Web Systems.</li>
-									<li>A cloned client-side dynamic Instagram.</li>
 								</ul>
 							</article>
 
