--- a/index.html
+++ b/index.html
@@ -96,9 +96,14 @@
 							Electrical and Computer Engineering
 						</a>
 						at Shanghai Jiao Tong University.
-						I am currently exploring my research interests
-						in how machine learning can play a role
-						in natural language processing and bio-informatics.
+					</p>
+					<p>
+						I have a passionate interest in machine learning,
+						especially in Graph Neural Network,
+						its interpretability and robustness.
+						I am also actively exploring how
+						state-of-the art machine learning breakthroughs
+						can play a role in traditional natural language processing and bio-informatics problems.
 					</p>
 
 					<div class="row">
