--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						especially in Graph Neural Network,
 						its interpretability and robustness.
 						I am also actively exploring how
-						state-of-the art machine learning breakthroughs
+						state-of-the-art machine learning breakthroughs
 						can play a role in traditional natural language processing and bio-informatics problems.
 					</p>
 
