--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 								<a href="projects/2020/deconvol/cover.png" class="image fit thumb">
 									<img src="projects/2020/deconvol/cover.png" alt="" />
 								</a>
-								<h3>Tissue Specific HiC De-convolution with ATAC-seq Input <i>(Research)</i></h3>
+								<h3>Tissue Specific HiC De-convolution with ATAC-seq Input</h3>
 								<p>
 									[<a href="https://github.com/Mars-tin/deconvhic">code</a>]
 								</p>
@@ -474,17 +474,16 @@
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="projects/2018/glove_band/cover.png" class="image fit thumb">
-									<img src="projects/2018/glove_band/cover.png" alt="" />
+								<a href="projects/2020/insta_mini/cover.png" class="image fit thumb">
+									<img src="projects/2020/insta_mini/cover.png" alt="" />
 								</a>
-								<h3>Glove Band</h3>
+								<h3>Instagram MINI</h3>
 								<p>
-									[<a href="https://drive.google.com/file/d/1L_r4rktZLMsNnVKVQK8JUs7I6TwcJPdH/view?usp=sharing">report</a>]
+									[<a href="https://eecs485staff.github.io/p3-insta485-clientside/">description</a>][code: upon request]
 								</p>
 								<ul>
-									<li>Instructed by <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
-									<li>Final Project of VG100, Intro to Engineering.</li>
-									<li>A pair of multi-instrumental MIDI-controlling gloves.</li>
+									<li>Project of EECS485, Web Systems.</li>
+									<li>A cloned client-side dynamic Instagram.</li>
 								</ul>
 							</article>
 
