--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 							</li>
 
 							<li>
-								<b>Technischen Universitat Berlin </b><br>
+								<b>Technischen Universit&auml;t Berlin </b><br>
 								<i> Winter Program || Jan. 2019 - Feb. 2019</i><br>
 
 								<span style="font-size: small; "><ul class="alt">
