--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					<div class="row">
 						<div class="column">
 							<ul class="actions">
-								<li><a href="/files/CV.pdf" class="button">CV</a></li>
+								<li><a href="/files/cv.pdf" class="button">CV</a></li>
 							</ul>
 						</div>
 						<div class="column">
@@ -182,7 +182,7 @@
 							</li>
 
 							<li>
-								<b>Technischen Universit&auml;t Berlin </b><br>
+								<b>Technische Universit&auml;t Berlin </b><br>
 								<i> Winter Program || Jan. 2019 - Feb. 2019</i><br>
 
 								<span style="font-size: small; "><ul class="alt">
