--- a/index.html
+++ b/index.html
@@ -98,11 +98,9 @@
 						at Shanghai Jiao Tong University.
 					</p>
 					<p>
-						I have a passionate interest in machine learning,
-						especially in Graph Neural Network,
-						its interpretability and robustness.
-						I am also actively exploring how
-						state-of-the-art machine learning breakthroughs
+						I have a passionate interest in machine learning, especially graph representation learning. 
+						At the moment, I am excited about Graph Neural Network, its interpretability and robustness.
+						I am also actively exploring how state-of-the-art machine learning breakthroughs
 						can play a role in traditional natural language processing and bio-informatics problems.
 					</p>
 
