--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					</p>
 					<p>
 						I have a passionate interest in machine learning, especially machine learning on graph-structured data. 
-						At the moment, I am excited about Graph Neural Network, its interpretability and robustness.
+						At the moment, I am intrigued by the studies of active learning, interpretability and robustness on Graph Neural Network.
 						I am also actively exploring how state-of-the-art machine learning breakthroughs
 						can play a role in traditional natural language processing and bio-informatics problems.
 					</p>
