--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Academic Writing II<br>
 												(VY200 @ Shanghai Jiao Tong University)
-												<li>With <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/125/">Ryan Thorpe</a></li>
+												<li>With <a href="http://rythorpe.com/">Ryan Thorpe</a></li>
 											</ul>
 										</section>
 
@@ -312,7 +312,7 @@
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Academic Writing I<br>
 												(VY100 @ Shanghai Jiao Tong University)
-												<li>With <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/125/">Ryan Thorpe</a></li>
+												<li>With <a href="http://rythorpe.com/">Ryan Thorpe</a></li>
 											</ul>
 										</section>
 
