--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 								<a href="projects/2020/active_learn/cover.png" class="image fit thumb">
 									<img src="projects/2020/active_learn/cover.png" alt="" />
 								</a>
-								<h3>Active learning on Graph Neural Network via graph partition</h3>
+								<h3>Active learning on Graph Neural Network via Hierarchical Graph Partitioning</h3>
 								<p>
 									[code: upon request]
 								</p>
@@ -435,7 +435,7 @@
 								</a>
 								<h3>Exception Handling in Autonomous Vehicles via Human Language Communication</h3>
 								<p>
-									[code: upon request]
+									[<a href="https://github.com/Mars-tin/mars-tin.github.io/blob/master/projects/2020/exception/proposal.pdf">slides</a>]
 								</p>
 								<ul>
 									<li>Instructed by <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
@@ -444,16 +444,17 @@
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="projects/2020/tad_level_extraction/cover.png" class="image fit thumb">
-									<img src="projects/2020/tad_level_extraction/cover.png" alt="" />
+								<a href="./2020/covariance/cover.png" class="image fit thumb">
+									<img src="./2020/covariance/cover.png" alt="" />
 								</a>
-								<h3>TAD Level Architectural Feature Extraction Caller</h3>
+								<h3>Correlational Information Utilization in Spatial Temporal GCN on Traffic Data</h3>
 								<p>
-									[<a href="https://github.com/Mars-tin/fast-stripe-calling">code</a>]
+									[<a href="https://github.com/Mars-tin/CopulaGNN-Synthetic">synthetic</a>][<a href="https://github.com/Mars-tin/STGCN">validation</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://www.pathology.med.umich.edu/faculty/xiaozhan">Xiaotian Zhang</a>.</li>
-									<li>Extract TAD level architectural stripes from HiC, evaluate the quality and compare between cell lines.</li>
+									<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
+									<li>Performed synthetic simulation studies on GNN models, and confirmed the incapability of GNNs to capture correlational information.</li>
+									<li>Better performance of ST‐GCN models is validated by experiments on traffic data with gaussian copula loss.</li>
 								</ul>
 							</article>
 
