--- a/projects/index.html
+++ b/projects/index.html
@@ -111,7 +111,7 @@
 								<a href="./2020/active_learn/cover.png" class="image fit thumb">
 									<img src="./2020/active_learn/cover.png" alt="" />
 								</a>
-								<h3>Active learning on Graph Neural Network via graph partition <i>(Research)</i></h3>
+								<h3>Active learning on Graph Neural Network via Hierarchical Graph Partitioning<i>(Research)</i></h3>
 								<p>
 									[code: upon request]
 								</p>
@@ -128,7 +128,7 @@
 								</a>
 								<h3>Exception Handling in Autonomous Vehicles via Human Language Communication <i>(Research)</i></h3>
 								<p>
-									[code: upon request]
+									[<a href="https://github.com/Mars-tin/mars-tin.github.io/blob/master/projects/2020/exception/proposal.pdf">slides</a>]
 								</p>
 								<ul>
 									<li>Instructed by <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
@@ -136,7 +136,23 @@
 									<li>Actively on-going...</li>
 								</ul>
 							</article>
-
+							
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/covariance/cover.png" class="image fit thumb">
+									<img src="./2020/covariance/cover.png" alt="" />
+								</a>
+								<h3>Correlational Information Utilization in Spatial Temporal GCN on Traffic Data<i>(Research)</i></h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/CopulaGNN-Synthetic">synthetic</a>][<a href="https://github.com/Mars-tin/STGCN">validation</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
+									<li>Performed synthetic simulation studies on GNN models, and confirmed the incapability of GNNs to capture correlational information.</li>
+									<li>Better performance of ST‐GCN models is validated by experiments on traffic data with gaussian copula loss.</li>
+									<li>This work is later developed into CopulaGNN, currently in <a href="https://arxiv.org/abs/2010.02089">preprint</a>.</li>
+								</ul>
+							</article>
+							
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="./2020/tad_level_extraction/cover.png" class="image fit thumb">
 									<img src="./2020/tad_level_extraction/cover.png" alt="" />
