--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div id="main">
 
 			<!-- One: About Me -->
-				<section id="one">
+				<section id="one">Correlational Information Utilization in Spatial Temporal GCN on Traffic Data
 					<header class="major">
 						<h2>About Me</h2>
 					</header>
@@ -444,8 +444,8 @@
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="./2020/covariance/cover.png" class="image fit thumb">
-									<img src="./2020/covariance/cover.png" alt="" />
+								<a href="projects//2020/covariance/cover.png" class="image fit thumb">
+									<img src="projects//2020/covariance/cover.png" alt="" />
 								</a>
 								<h3>Correlational Information Utilization in Spatial Temporal GCN on Traffic Data</h3>
 								<p>
