--- a/projects/index.html
+++ b/projects/index.html
@@ -143,12 +143,12 @@
 								</a>
 								<h3>Correlational Information Utilization in Spatial Temporal GCN on Traffic Data<i>(Research)</i></h3>
 								<p>
-									[<a href="https://github.com/Mars-tin/CopulaGNN-Synthetic">synthetic</a>][<a href="https://github.com/Mars-tin/STGCN">validation</a>]
+									[<a href="https://github.com/Mars-tin/CopulaGNN-Synthetic">code: synthetic</a>][<a href="https://github.com/Mars-tin/STGCN">code: validation</a>]
 								</p>
 								<ul>
 									<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
-									<li>Performed synthetic simulation studies on GNN models, and confirmed the incapability of GNNs to capture correlational information.</li>
-									<li>Better performance of ST‐GCN models is validated by experiments on traffic data with gaussian copula loss.</li>
+									<li>Confirm the incapability of GNNs to capture correlational information by synthetic simulation.</li>
+									<li>Validate lower training loss of ST‐GCN on traffic data with gaussian copula loss.</li>
 									<li>This work is later developed into CopulaGNN, currently in <a href="https://arxiv.org/abs/2010.02089">preprint</a>.</li>
 								</ul>
 							</article>
