--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div id="main">
 
 			<!-- One: About Me -->
-				<section id="one">Correlational Information Utilization in Spatial Temporal GCN on Traffic Data
+				<section id="one">
 					<header class="major">
 						<h2>About Me</h2>
 					</header>
