--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 								</a>
 								<h3>Exception Handling in Autonomous Vehicles via Human Language Communication</h3>
 								<p>
-									[<a href="https://github.com/Mars-tin/mars-tin.github.io/blob/master/projects/2020/exception/proposal.pdf">slides</a>]
+									[<a href="https://drive.google.com/file/d/1LYSNOeZKo3tscnfy98dofvue9eWrENYa/view?usp=sharing">slides</a>]
 								</p>
 								<ul>
 									<li>Instructed by <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
