--- a/index.html
+++ b/index.html
@@ -480,12 +480,17 @@
 						<ul>
 							<li>I was born and raised up in Chengdu, the home of pandas.</li>
 							<li>I am proud of Chengdu Foreign Languages School, my high school, and identify myself as a CFLSer. 成外人永远不会成外人。</li>
-							<li>My dream school during high school was The University of Hong Kong (HKU),
-								yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
+							<li>My dream school during high school was The University of Hong Kong (HKU), yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
 							<li>I love literature and drama. I am particularly interested in Shakespeare's plays, ancient Chinese drama and modern Asian literature. Here is one of my essays about <a href="files/cross-dressing.pdf">Cross-dressed Heroines in Comedies</a>.</li>
 							<li>I enjoyed travelling and have been to 12 countries. Maybe I have been to your hometown?</li>
 							<li>I am a super fan of <a href="https://nightwish.com/">Nightwish</a>.
 								My favourite album is <a href="https://music.apple.com/us/album/imaginaerum/482858875">Imaginaerum</a>.</li>
+						</ul>
+						<h3>Mental Support</h3>
+						<ul>
+							<li>I once suffered from serious depression but I am lucky enough to have recovered. 
+								If you need any mental support, please feel free to send me an email. 
+								Sometimes it is easier to share your feelings to a stranger.</li>
 						</ul>
 					</section>
 				
