--- a/projects/index.html
+++ b/projects/index.html
@@ -159,12 +159,12 @@
 								</a>
 								<h3>TAD Level Architectural Feature Extraction Caller <i>(Research)</i></h3>
 								<p>
-									[<a href="https://github.com/Mars-tin/fast-stripe-calling">code</a>]
+									[<a href="https://drive.google.com/drive/folders/1JFDXxo_La9fbkgpfbhbW7Xb4_nDeQ_3d">slides</a>][<a href="https://github.com/Mars-tin/fast-stripe-calling">code</a>]
 								</p>
 								<ul>
 									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://www.pathology.med.umich.edu/faculty/xiaozhan">Xiaotian Zhang</a>.</li>
 									<li>Extract TAD level architectural stripes from HiC, evaluate the quality and compare between cell lines.</li>
-									<li>Todo: extend the algorithm to inversions and het deletions.</li>
+									<li>Todo: Paper write-up in late December.</li>
 								</ul>
 							</article>
 
