--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 					</p>
 
 					<p>
-						I am a Senior student at University of Michigan in
+						I am a Senior student at the University of Michigan in
 						<a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">
 							Computer Science
 						</a>,
-						with a dual degree of
+						with a dual degree in
 						<a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">
 							Electrical and Computer Engineering
 						</a>
@@ -99,9 +99,8 @@
 					</p>
 					<p>
 						I have a passionate interest in machine learning, especially machine learning on graph-structured data. 
-						At the moment, I am intrigued by the studies of active learning, interpretability and robustness on Graph Neural Network.
-						I am also actively exploring how state-of-the-art machine learning breakthroughs
-						can play a role in traditional natural language processing and bio-informatics problems.
+						At the moment, I am intrigued by the studies of active learning, interpretability, and robustness on Graph Neural Network. 
+						I am also actively exploring how state-of-the-art machine learning breakthroughs can play a role in enabled interdisciplines.
 					</p>
 
 					<div class="row">
@@ -297,7 +296,7 @@
 										<section>
 											<h4>January - February</h4>
 											<ul class="edu">
-												&#127979 Winter Program @ Technischen Universitat Berlin
+												&#127979 Winter Program @ Technische Universit&auml;t Berlin
 											</ul>
 										</section>
 
