--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 		<!-- Navigator -->
 			<nav id="nav">
 				<ul>
-					<li><a href="#two" class="inactive">Experience</a></li>
-					<li><a href="#three" class="inactive">Portfolio</a></li>
-					<li><a href="#four" class="inactive">Blogs</a></li>
+					<li><a href="#two" class="inactive"></a>News</li>
+					<li><a href="#three" class="inactive">Experience</a></li>
+					<li><a href="#four" class="inactive">Portfolio</a></li>
 					<li><a href="#five" class="inactive">Misc</a></li>
 				</ul>
 			</nav>
@@ -128,8 +128,21 @@
 
 				</section>
 
-			<!-- Two: Experience -->
+			<!-- Two: News -->
 				<section id="two">
+					<h2>News</h2>
+					<ul>
+						<li>
+							[Dec. 2020] I will be the Instructional Aide for EECS 492 Winter 2021, working with Professor Chai!
+						</li>
+						<li>
+							[Aug. 2020] I moved my blogs <a href="/archives/">here</a>. Let me know what you want to see!
+						</li>
+					</ul>
+				</section>
+			
+			<!-- Three: Experience -->
+				<section id="three">
 					<h2>Experience</h2>
 
 						<h3>Education</h3>
@@ -394,8 +407,8 @@
       					</div>
 				</section>
 
-				<!-- Three: Projects -->
-					<section id="three">
+				<!-- Four: Projects -->
+					<section id="four">
 						<h2>Selected Projects</h2>
 
 						<div class="row">
@@ -465,15 +478,7 @@
 
 					</section>
 			
-				<!-- Four -->
-					<section id="four">
-						<h2>Blogs</h2>
-						<p>
-							Check my blog <a href="/archives/">here</a>. Let me know what you want to see!
-						</p>
-					</section>
-			
-				<!-- Fiv -->
+				<!-- Five -->
 					<section id="five">
 						<h2>Misc</h2>
 						<ul>
