--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- Navigator -->
 			<nav id="nav">
 				<ul>
-					<li><a href="#two" class="inactive"></a>News</li>
+					<li><a href="#two" class="inactive">News</a></li>
 					<li><a href="#three" class="inactive">Experience</a></li>
 					<li><a href="#four" class="inactive">Portfolio</a></li>
 					<li><a href="#five" class="inactive">Misc</a></li>
