--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
 								<div class="row">
 									<div class="column">
 										<span style="font-size: small; "><ul class="alt">
-											<li>Machine Learning (A+)</li>
+											<li>Natural Language Processing (A+)</li>
 											<li>Deep Learning in CV (A+)</li>
+											<li>Machine Learning (A+)</li>
 											<li>Artificial Intelligence (A)</li>
 										</ul></span>
 								  	</div>
 								  	<div class="column">
 										<span style="font-size: small; "><ul class="alt">
-											<li>Natural Language Processing (in progress)</li>
 											<li>Computer Vision (in progress)</li>
 											<li>Numerical Analysis (A+)</li>
 											<li>Matrix Theory (A+)</li>
@@ -488,7 +488,7 @@
 								<ul>
 									<li>Final project of EECS 595: Natural Language Processing. Instructed by Professor <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
 									<li>Exploited external knowledge to perform NLI tasks including Question Answering, Conversation Entailment and Plausible Inference.</li>
-									<li>Experimented on different finetuning strategies and utilized knowledge graphs for GCN-based reasoning./li>
+									<li>Experimented on different finetuning strategies and utilized knowledge graphs for GCN-based reasoning.</li>
 								</ul>
 							</article>	
 							
