--- a/index.html
+++ b/index.html
@@ -496,14 +496,14 @@
 								<a href="projects/2020/unpaired-trans/cover.png" class="image fit thumb">
 									<img src="projects/2020/unpaired-trans/cover.png" alt="" />
 								</a>
-								<h3>Scalable and Diverse NNeural Style Transfer with Generative Adversarial Networks</h3>
+								<h3>Scalable and Diverse Neural Style Transfer with Generative Adversarial Networks</h3>
 								<p>
 									[<a href="https://drive.google.com/file/d/1Yk9FonLeT-7KKhil3kzjzpbQqpA8Dq1c/view?usp=sharing">report</a>][<a href="https://drive.google.com/file/d/1Nf8k7UIpzWM0vVa4PQRpcu4zphsqGxUb/view?usp=sharing">slides</a>][<a href="https://github.com/Mars-tin/unpaired-image-to-image-translation">code</a>]
 								</p>
 								<ul>
 									<li>Final project of EECS 442: Computer Vision. Instructed by Professor Andrew Owens.</li>
 									<li>Reproduced CycleGAN, StarGAN v1 and v2 for unpaired image translation.</li>
-									<li>Evaluated them quantitatively on neural style transfer tasks with FID score./li>
+									<li>Evaluated them quantitatively on neural style transfer tasks with FID score.</li>
 								</ul>
 							</article>
 							
