--- a/index.html
+++ b/index.html
@@ -155,14 +155,15 @@
 									<div class="column">
 										<span style="font-size: small; "><ul class="alt">
 											<li>Natural Language Processing (A+)</li>
-											<li>Deep Learning in CV (A+)</li>
 											<li>Machine Learning (A+)</li>
-											<li>Artificial Intelligence (A)</li>
+											<li>Deep Learning for CV (A+)</li>
+											<li>Computer Vision (A+)</li>
 										</ul></span>
 								  	</div>
 								  	<div class="column">
 										<span style="font-size: small; "><ul class="alt">
-											<li>Computer Vision (in progress)</li>
+											<li>Artificial Intelligence (A)</li>
+											<li>Data Structure and Algorithms (A)</li>
 											<li>Numerical Analysis (A+)</li>
 											<li>Matrix Theory (A+)</li>
 										</ul></span>
