--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						At the moment, I am intrigued by the studies of active learning, interpretability, and robustness on Graph Neural Network. 
 						I am also actively exploring how state-of-the-art machine learning breakthroughs can play a role in enabled interdisciplines.
 					</p>
-
+					
 					<div class="row">
 						<div class="column">
 							<ul class="actions">
@@ -132,6 +132,9 @@
 				<section id="two">
 					<h2>News</h2>
 					<ul>
+						<li>
+							[Temporary Update] Transcript for Fall 2020 is updated <a href="https://drive.google.com/file/d/1dWj0sJUM5homzoo81sOAeYs37ACakNws/view?usp=sharing">here</a> for graduate school recruiting committee visiting this page.
+						</li>
 						<li>
 							[Dec. 2020] I will be the Instructional Aide for EECS 492 Winter 2021, working with Professor Chai!
 						</li>
