--- a/projects/index.html
+++ b/projects/index.html
@@ -91,6 +91,36 @@
 					<h2>2020</h2>
 
 						<div class="row">
+							
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/commonsense/cover.png" class="image fit thumb">
+									<img src="./2020/commonsense/cover.png" alt="" />
+								</a>
+								<h3>Towards More Knowledgeable Reasoning: Experiments on Natural Language Inference <i>(Course)</i></h3>
+								<p>
+									[<a href="https://drive.google.com/file/d/1shUU8wsjYzTVQkXBfr8Y3NFhJsEAV9PI/view?usp=sharing">report</a>][<a href="https://github.com/Mars-tin/commonsense-for-inference">code</a>]
+								</p>
+								<ul>
+									<li>Final project of EECS 595: Natural Language Processing. Instructed by Professor <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
+									<li>Exploited external knowledge to perform NLI tasks including Question Answering, Conversation Entailment and Plausible Inference.</li>
+									<li>Experimented on different finetuning strategies and utilized knowledge graphs for GCN-based reasoning.</li>
+								</ul>
+							</article>	
+							
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/unpaired-trans/cover.png" class="image fit thumb">
+									<img src="./2020/unpaired-trans/cover.png" alt="" />
+								</a>
+								<h3>Scalable and Diverse Neural Style Transfer with Generative Adversarial Networks <i>(Course)</i></h3>
+								<p>
+									[<a href="https://drive.google.com/file/d/1Yk9FonLeT-7KKhil3kzjzpbQqpA8Dq1c/view?usp=sharing">report</a>][<a href="https://drive.google.com/file/d/1Nf8k7UIpzWM0vVa4PQRpcu4zphsqGxUb/view?usp=sharing">slides</a>][<a href="https://github.com/Mars-tin/unpaired-image-to-image-translation">code</a>]
+								</p>
+								<ul>
+									<li>Final project of EECS 442: Computer Vision. Instructed by Professor Andrew Owens.</li>
+									<li>Reproduced CycleGAN, StarGAN v1 and v2 for unpaired image translation.</li>
+									<li>Evaluated them quantitatively on neural style transfer tasks with FID score.</li>
+								</ul>
+							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="./2020/seg_explainer/cover.png" class="image fit thumb">
@@ -101,7 +131,7 @@
 									[<a href="https://github.com/Mars-tin/cell-seg-explainer">code</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://medicine.vumc.org/person/marcela-brissova-phd">Marcela Brissova</a>.</li>
+									<li>Instructed by Professor <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://medicine.vumc.org/person/marcela-brissova-phd">Marcela Brissova</a>.</li>
 									<li>Redesign the GNN Explainer to perform label-wise explanation, validate the model on T2D islet samples and extract predictive spatial patterns. </li>
 									<li>Actively on-going...</li>
 								</ul>
@@ -111,12 +141,12 @@
 								<a href="./2020/active_learn/cover.png" class="image fit thumb">
 									<img src="./2020/active_learn/cover.png" alt="" />
 								</a>
-								<h3>Active learning on Graph Neural Network via Hierarchical Graph Partitioning<i>(Research)</i></h3>
+								<h3>Active learning on Graph Neural Network via Hierarchical Graph Partitioning <i>(Research)</i></h3>
 								<p>
 									[code: upon request]
 								</p>
 								<ul>
-									<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
+									<li>Instructed by Professor <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
 									<li>A practical active learning query strategy on Graph Neural Networks.</li>
 									<li>In preparation of publication...</li>
 								</ul>
@@ -131,7 +161,7 @@
 									[<a href="https://github.com/Mars-tin/mars-tin.github.io/blob/master/projects/2020/exception/proposal.pdf">slides</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
+									<li>Instructed by Professor <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>.</li>
 									<li>Develop a smart interface that takes human interaction by language instructions and handle the exceptions in autonomous vehicles. </li>
 									<li>Actively on-going...</li>
 								</ul>
@@ -146,7 +176,7 @@
 									[<a href="https://github.com/Mars-tin/CopulaGNN-Synthetic">code: synthetic</a>][<a href="https://github.com/Mars-tin/STGCN">code: validation</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
+									<li>Instructed by Professor <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a>.</li>
 									<li>Confirm the incapability of GNNs to capture correlational information by synthetic simulation.</li>
 									<li>Validate lower training loss of ST‐GCN on traffic data with gaussian copula loss.</li>
 									<li>This work is later developed into CopulaGNN, currently in <a href="https://arxiv.org/abs/2010.02089">preprint</a>.</li>
@@ -162,7 +192,7 @@
 									[<a href="https://drive.google.com/drive/folders/1JFDXxo_La9fbkgpfbhbW7Xb4_nDeQ_3d">slides</a>][<a href="https://github.com/Mars-tin/fast-stripe-calling">code</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://www.pathology.med.umich.edu/faculty/xiaozhan">Xiaotian Zhang</a>.</li>
+									<li>Instructed by Professor <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://www.pathology.med.umich.edu/faculty/xiaozhan">Xiaotian Zhang</a>.</li>
 									<li>Extract TAD level architectural stripes from HiC, evaluate the quality and compare between cell lines.</li>
 									<li>Todo: Paper write-up in late December.</li>
 								</ul>
@@ -177,7 +207,7 @@
 									[<a href="https://github.com/Mars-tin/deconvhic">code</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a>.</li>
+									<li>Instructed by Professor <a href="https://jieliu6.github.io/">Jie Liu</a>.</li>
 									<li>Deconvolute the islet tissue specific HiC into single cell HiC specific to alpha and beta cells, and validate the results on synthetic and real dataset.</li>
 									<li>Todo: extend the algorithm to minority cell types like delta cells.</li>
 								</ul>
@@ -192,7 +222,7 @@
 									[<a href="https://eecs485staff.github.io/p3-insta485-clientside/">description</a>][code: upon request]
 								</p>
 								<ul>
-									<li>Project of EECS485, Web Systems.</li>
+									<li>Project of EECS485, Web Systems. Instructed by Professor Andrew DeOrio</li>
 									<li>A cloned client-side dynamic Instagram.</li>
 								</ul>
 							</article>
@@ -218,7 +248,7 @@
 									[<a href="https://github.com/Mars-tin/curvature-flow">code</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="http://www.math.lsa.umich.edu/~shravan/">Shravan Veerapaneni</a>.</li>
+									<li>Instructed by Professor <a href="http://www.math.lsa.umich.edu/~shravan/">Shravan Veerapaneni</a>.</li>
 									<li>Project of MATH371, Numerical Analysis.</li>
 									<li>Apply Euler Method to de-noise a predefined initial 2D-curve surface and obtain a smoothed curve.</li>
 								</ul>
@@ -234,7 +264,7 @@
 									[<a href="https://github.com/Mars-tin/shooting-cases-analysis/">code</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
+									<li>Instructed by Professor <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
 									<li>Project of VE401, Statistics and Probability.</li>
 									<li>Model the the number of mass shootings and make prediction for cases in 2019 based on the data for 2015 to 2018.</li>
 								</ul>
@@ -250,7 +280,7 @@
 									[<a href="https://github.com/Mars-tin/food-package-content-analysis">code</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
+									<li>Instructed by Professor <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
 									<li>Project of VE401, Statistics and Probability.</li>
 									<li>Investigate the metrological testing for net quantities of products in prepackages with fixed content, issued by Chinese government in 2005.</li>
 								</ul>
@@ -276,7 +306,7 @@
 									[<a href="https://drive.google.com/file/d/1L_r4rktZLMsNnVKVQK8JUs7I6TwcJPdH/view?usp=sharing">report</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
+									<li>Instructed by Professor <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
 									<li>Final Project of VG100, Intro to Engineering.</li>
 									<li>A pair of multi-instrumental MIDI-controlling gloves.</li>
 								</ul>
@@ -291,7 +321,7 @@
 									[<a href="https://drive.google.com/file/d/1lZpN5f3_qHV2oVW9vlGoFpzl6Da3qTPn/view?usp=sharing">report</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
+									<li>Instructed by Professor <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
 									<li>Mid Project of VG100, Intro to Engineering. Rank #2.</li>
 									<li>A bridge-crane system.</li>
 								</ul>
@@ -307,7 +337,7 @@
 									[<a href="https://github.com/Mars-tin/optical-caustic-analysis">code</a>]
 								</p>
 								<ul>
-									<li>Instructed by <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
+									<li>Instructed by Professor <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
 									<li>Project of VV285, Honors Mathematics. Rank #1.</li>
 									<li>Model the optical phenomenon of caustic in the coffee cup and perform simulations.</li>
 								</ul>
