--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 									[<a href="https://drive.google.com/file/d/1L_r4rktZLMsNnVKVQK8JUs7I6TwcJPdH/view?usp=sharing">report</a>]
 								</p>
 								<ul>
-									<li>Final Project of VG100, Intro to Engineering. Instructed by <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
+									<li>Final Project of VG100, Intro to Engineering. Instructed by Professor <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
 									<li>A pair of multi-instrumental MIDI-controlling gloves.</li>
 								</ul>
 							</article>
