--- a/index.html
+++ b/index.html
@@ -213,7 +213,21 @@
 						<h3>Timeline</h3>
     					<div id="timeline">
 							<div>
+								<!-- 2021 -->
+									<section class="year">
+										<h3>2021</h3>
 
+										<section>
+											<h4>January - Present</h4>
+											<ul class="tutor">
+												&#128214 Instructional Aide for Artificial Intelligence<br>
+												(EECS492 @ University of Michigan)
+												<li>With Professor <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a></li>
+											</ul>
+										</section>
+
+									</section>
+								
 								<!-- 2020 -->
 									<section class="year">
 										<h3>2020</h3>
