--- a/index.html
+++ b/index.html
@@ -156,19 +156,30 @@
 
 								<div class="row">
 									<div class="column">
+										Artificial Intelligence:
 										<span style="font-size: small; "><ul class="alt">
 											<li>Natural Language Processing (A+)</li>
-											<li>Machine Learning (A+)</li>
-											<li>Artificial Intelligence (A)</li>
-											<li>Data Structure and Algorithms (A)</li>
-										</ul></span>
-								  	</div>
-								  	<div class="column">
-										<span style="font-size: small; "><ul class="alt">
 											<li>Deep Learning for CV (A+)</li>
 											<li>Computer Vision (A+)</li>
+											<li>Machine Learning (A+)</li>
+											<li>Artificial Intelligence (A)</li>
+											<li>Data Mining (in progress)</li>
+											<li>Information Retrieval (in progress)</li>
+										</ul></span>
+								  	</div>
+									<div class="column">
+										Software Development:
+										<span style="font-size: small; "><ul class="alt">
+											<li>Web Systems (A)</li>
+											<li>Data Structure and Algorithms (A)</li>
+											<li>Video Game Development (in progress)</li>
+										</ul></span>
+
+										Mathematics
+										<span style="font-size: small; "><ul class="alt">
 											<li>Numerical Analysis (A+)</li>
 											<li>Matrix Theory (A+)</li>
+											<li>Probability Theory (A)</li>
 										</ul></span>
 								  	</div>
 								</div>
@@ -182,14 +193,10 @@
 								<div class="row">
 								  	<div class="column">
 										<span style="font-size: small; "><ul class="alt">
-											<li>Programming and Data Structure (A)</li>
-											<li>Logic Design (A)</li>
-										</ul></span>
-								  	</div>
-									<div class="column">
-										<span style="font-size: small; "><ul class="alt">
 											<li>Discrete Mathematics (A)</li>
 											<li>Honors Mathematics II-IV (A-, A, A-)</li>
+											<li>Programming and Data Structure (A)</li>
+											<li>Logic Design (A)</li>
 										</ul></span>
 								  	</div>
 								</div>
