--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
 											<li>Data Structure and Algorithms (A)</li>
 											<li>Video Game Development (in progress)</li>
 										</ul></span>
-
-										Mathematics
+										Mathematics:
 										<span style="font-size: small; "><ul class="alt">
 											<li>Numerical Analysis (A+)</li>
 											<li>Matrix Theory (A+)</li>
