--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 											<li>Artificial Intelligence (A)</li>
 											<li>Data Mining (in progress)</li>
 											<li>Information Retrieval (in progress)</li>
+											<li>Ethics for AI and Robotics (in progress)</li>
 										</ul></span>
 								  	</div>
 									<div class="column">
