--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
 							<li>
 								<b>University of Michigan, Ann Arbor</b><br>
 								<i> B.S. in Computer Science || GPA: 4.00/4.00 || Sept. 2019 - Present</i><br>
+								<i> Minor in Mathematics </i><br>
+								<i> Advisors: Dr. Joyce Chai, Dr. Jie Liu, Dr. Qiaozhu Mei</i>
 
 								<div class="row">
 									<div class="column">
