--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
 						<ul>
 							<li>
 								<b>University of Michigan, Ann Arbor</b><br>
-								<i> B.S. in Computer Science || GPA: 4.00/4.00 || Sept. 2019 - Present</i><br>
-								<i> Minor in Mathematics </i><br>
-								<i> Advisors: Dr. Joyce Chai, Dr. Jie Liu, Dr. Qiaozhu Mei</i>
+								<i> B.S.E in Computer Science | Minor in Mathematics | GPA: 4.00/4.00 | Sept 2019 - May 2021</i><br>
+								<i> <b>Advisors</b>: Dr. Joyce Chai, Dr. Jie Liu, Dr. Qiaozhu Mei</i>
 
 								<div class="row">
 									<div class="column">
@@ -187,7 +186,7 @@
 
 							<li>
 								<b>Shanghai Jiao Tong University</b><br>
-								<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00 || Sept. 2017 - Present</i><br>
+								<i> B.S.E in Electrical and Computer Engineering | GPA: 3.81/4.00 | Sept 2017 - Aug 2021</i><br>
 
 								<div class="row">
 								  	<div class="column">
@@ -203,7 +202,7 @@
 
 							<li>
 								<b>Technische Universit&auml;t Berlin </b><br>
-								<i> Winter Program || Jan. 2019 - Feb. 2019</i><br>
+								<i> Winter Program | Jan 2019 - Feb 2019</i><br>
 
 								<span style="font-size: small; "><ul class="alt">
 									<li>Programming in Java (A)</li>
@@ -212,7 +211,7 @@
 
 							<li>
 								<b> Chengdu Foreign Languages School </b> <br>
-								<i> High School || Sept. 2011 - June 2017</i>
+								<i> High School | Sept 2011 - June 2017</i>
 							</li>
 						</ul>
 
@@ -581,8 +580,9 @@
 						<h3>Mental Support</h3>
 						<ul>
 							<li>I once suffered from serious depression but I am lucky enough to have recovered. 
-								If you need any mental support, please feel free to send me an email. 
-								Sometimes it is easier to share your feelings to a stranger.</li>
+							    If you need any mental support, please feel free to send me an email. 
+						            Sometimes it is easier to share your feelings to a stranger.</li>
+							<li><a href="https://uhs.umich.edu/stressresources">Resources for Stress and Mental Health</a> @ Michigan.</li>
 						</ul>
 					</section>
 				
