--- a/index.html
+++ b/index.html
@@ -584,6 +584,12 @@
 						            Sometimes it is easier to share your feelings to a stranger.</li>
 							<li><a href="https://uhs.umich.edu/stressresources">Resources for Stress and Mental Health</a> @ Michigan.</li>
 						</ul>
+						<h3>Friends</h3>
+						<ul>
+							<li><a href="https://codgician.me/">Jimmy Zhang</a> B.S. @ HDU, Hangzhou, China.</li>
+							<li><a href="https://swayye.xyz/">Sway Ye</a> Ph.D. @ SJTU, Shanghai, China.</li>
+							<li>...</li>
+						</ul>
 					</section>
 				
 				<!-- Six -->
