--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="projects//2020/covariance/cover.png" class="image fit thumb">
-									<img src="projects//2020/covariance/cover.png" alt="" />
+								<a href="projects/2020/covariance/cover.png" class="image fit thumb">
+									<img src="projects/2020/covariance/cover.png" alt="" />
 								</a>
 								<h3>Correlational Information Utilization in Spatial Temporal GCN on Traffic Data</h3>
 								<p>
@@ -560,7 +560,7 @@
 						</div>
 						
 						<ul class="actions">
-							<li><a href="/projects/" class="button">Full Portfolio</a></li>
+							<li><a href="/projects" target="_self" class="button">Full Portfolio</a></li>
 						</ul>
 
 					</section>
