--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
 		<title>Martin - Ziqiao Ma</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 
 	<body class="is-preload">
@@ -32,8 +32,10 @@
 		<!-- Navigator -->
 			<nav id="nav">
 				<ul>
+					<li><a href="#two" class="active">2021</a></li>
+					<li><a href="#three" class="inactive">2020</a></li>
+					<li><a href="#four" class="inactive">2019 And Earlier</a></li>
 					<li><a href="/" class="inactive">Home</a></li>
-					<li><a href="#one" class="inactive">Projects</a></li>
 				</ul>
 			</nav>
 
@@ -79,9 +81,6 @@
 					</header>
 					<p>
 						Here is my full portfolio.
-					</p>
-					<p>
-						For some projects, details are available upon request.
 					</p>
 				</section>
 
@@ -422,14 +421,14 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="/assets/js/jquery.min.js"></script>
-			<script src="/assets/js/jquery.poptrox.min.js"></script>
-			<script src="/assets/js/jquery.scrollex.min.js"></script>
-			<script src="/assets/js/jquery.scrolly.min.js"></script>
-			<script src="/assets/js/browser.min.js"></script>
-			<script src="/assets/js/breakpoints.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.poptrox.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
