--- a/projects/index.html
+++ b/projects/index.html
@@ -32,7 +32,7 @@
 		<!-- Navigator -->
 			<nav id="nav">
 				<ul>
-					<li><a href="#two" class="active">2021</a></li>
+					<li><a href="#two" class="inactive">2021</a></li>
 					<li><a href="#three" class="inactive">2020</a></li>
 					<li><a href="#four" class="inactive">2019 And Earlier</a></li>
 					<li><a href="/" class="inactive">Home</a></li>
@@ -82,10 +82,35 @@
 					<p>
 						Here is my full portfolio.
 					</p>
+					<ul class="actions">
+						<li><a href="/projects/games" target="_self" class="button">Game Design</a></li>
+					</ul>
 				</section>
 
-			<!-- Two: 2020 -->
+			<!-- Two: 2021 -->
 				<section id="two">
+					<h2>2021</h2>
+
+					<div class="row">
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2021/zelda/cover.png" class="image fit thumb">
+									<img src="./2021/zelda/cover.png" alt="" />
+								</a>
+								<h3>The Legend of Zelda Unity remaster <i>(Course)</i></h3>
+								<p>
+									[<a href="http://www-personal.umich.edu/~marstin/zelda/">play</a>]
+								</p>
+								<ul>
+									<li>Project 1 of <a href="https://www.eecs494.com/">EECS 494: Video Game Development</a>.</li>
+								</ul>
+							</article>
+
+					</div>
+				</section>
+
+			<!-- Three: 2020 -->
+				<section id="three">
 
 					<h2>2020</h2>
 
@@ -230,8 +255,8 @@
 
 				</section>
 
-			<!-- Three: 2019 -->
-			    <section id="three">
+			<!-- Four: 2019 -->
+			    <section id="four">
 
 					<h2>2019</h2>
 
@@ -288,9 +313,9 @@
 
 				</section>
 
-			<!-- Four: 2018 -->
+			<!-- Five: 2018 -->
 
-			    <section id="four">
+			    <section id="five">
 
 					<h2>2018</h2>
 
@@ -346,8 +371,8 @@
 
 				</section>
 
-				<!-- Five -->
-					<section id="five">
+				<!-- Six -->
+					<section id="six">
 						<h2>Feedback</h2>
 						<p>
 							You are welcome to drop me a message :)
