--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,7 @@
 					<li><a href="#two" class="inactive">2021</a></li>
 					<li><a href="#three" class="inactive">2020</a></li>
 					<li><a href="#four" class="inactive">2019 And Earlier</a></li>
-					<li><a href="/" class="inactive">Home</a></li>
+					<li><a href="#six" class="inactive">Links</a></li>
 				</ul>
 			</nav>
 
@@ -371,8 +371,14 @@
 
 				</section>
 
-				<!-- Six -->
-					<section id="six">
+			<!-- Six: Links -->
+				<section id="six">
+					<h2>Links</h2>
+					<a href="/">Homepage</a>
+				</section>
+
+				<!-- Seven -->
+					<section id="seven">
 						<h2>Feedback</h2>
 						<p>
 							You are welcome to drop me a message :)
@@ -433,7 +439,6 @@
 
 						</div>
 					</section>
-
 
 				<!-- Footer -->
 					<section id="footer">
