--- a/projects/games/index.html
+++ b/projects/games/index.html
@@ -33,7 +33,7 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="#two" class="inactive">2021</a></li>
-					<li><a href="/" class="inactive">Home</a></li>
+					<li><a href="#three" class="inactive">Links</a></li>
 				</ul>
 			</nav>
 
@@ -107,8 +107,14 @@
 					</div>
 				</section>
 
-				<!-- Three -->
-					<section id="three">
+			<!-- Three: Links -->
+				<section id="three">
+					<h2>Links</h2>
+					<a href="/">Homepage</a>
+				</section>
+
+				<!-- Four -->
+					<section id="four">
 						<h2>Feedback</h2>
 						<p>
 							You are welcome to drop me a message :)
