--- a/projects/games/index.html
+++ b/projects/games/index.html
@@ -80,9 +80,6 @@
 					<p>
 						Here is my video game portfolio.
 					</p>
-					<ul class="actions">
-						<li><a href="/projects/games" target="_self" class="button">Game Design</a></li>
-					</ul>
 				</section>
 
 			<!-- Two: 2021 -->
@@ -110,7 +107,10 @@
 			<!-- Three: Links -->
 				<section id="three">
 					<h2>Links</h2>
-					<a href="/">Homepage</a>
+					<ul>
+						<li><a href="/">Homepage</a></li>
+						<li><a href="/projects/">Full Portfolio</a></li>
+					</ul>
 				</section>
 
 				<!-- Four -->
